:sparkles: adds overall and  branch progress percentage for analytics purposes.